fix investor spacing

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -74,8 +74,8 @@
       margin-bottom: 40px;
       
       div {
-        width: 109px;
-        height: 109px;
+        width: 120px;
+        height: 120px;
         border: 2px solid #DADADA;
         margin: 0px auto;
         
@@ -83,7 +83,7 @@
           margin: 0px auto;
           width: 50%;
           height: 50%;
-          margin-top: 25px;
+          margin-top: 30px;
         }
       }
       
